# open-flow

./: README.md  package-lock.json  package.json
.github/workflows/: release.yml
docs/: design-philosophy.md
docs/design/: final-design.md
src/: app.html
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  main.rs  state.rs
src-tauri/src/asr/: engine.rs
src-tauri/src/audio/: capture.rs  chunker.rs  mod.rs  vad.rs
src-tauri/src/db/: dictionary.rs  hints.rs  mod.rs  schema.rs  settings.rs  snippets.rs  tones.rs
src-tauri/src/inject/: clipboard.rs  context.rs  mod.rs
src-tauri/src/models/: download.rs
src-tauri/src/pipeline/: orchestrator.rs
src-tauri/src/polish/: commands.rs  engine.rs  mod.rs  prompt.rs
src/routes/: +page.svelte
