[package]
name = "openflow"
version = "0.1.0"
description = "Local-first AI voice dictation"
authors = ["raghuvc"]
edition = "2021"

[lib]
name = "openflow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
cpal = "0.15"
whisper-rs = "0.13"
ort = { version = "2.0.0-rc.11", features = ["load-dynamic"] }
ndarray = "0.17"
arboard = "3"
core-graphics = "0.24"
rusqlite = { version = "0.31", features = ["bundled"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dirs = "5"
anyhow = "1"
ureq = "3"
